--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,43 @@
+h1 {
+  font-size: 1.38rem;
+  text-align: center;
+  font-family: "Press Start 2P", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  margin: 0;
+}
+
+h2 {
+  font-size: 0.875rem;
+  font-family: "Press Start 2P", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  margin: 0;
+}
+
+h3 {
+  font-size: 0.5rem;
+  font-family: "Press Start 2P", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  margin: 0;
+}
+
+p {
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  font-family: "Source Code Pro", monospace;
+  font-optical-sizing: auto;
+  font-style: normal;
+  margin: 0;
+  color: #979797;
+}
+
+html {
+  background: #161616;
+  color: #ffffff;
+}
+
 *, *::before, *::after {
   box-sizing: border-box;
 }
@@ -10,34 +50,175 @@ body {
   align-items: flex-start;
 }
 
-.panel {
-  flex-grow: 1;
-  margin: 1rem;
-  padding: 1rem;
-  border: 1px solid #ddd;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+button {
+  padding: 0 1.5rem;
+  height: 3rem;
   border-radius: 0.5rem;
-  overflow: hidden;
+  background: #BFFB4F;
+  color: #000000;
+  font-size: 0.625rem;
+  font-family: "Press Start 2P", system-ui;
+  border: none;
+  box-shadow: none;
+  cursor: pointer;
+}
+button:hover {
+  background: #99C93F;
+}
+button:active {
+  background: #73972F;
+}
+
+.transaction-panel {
   display: flex;
   flex-direction: column;
+  gap: 2rem;
+  padding: 7.5rem;
+  width: 100%;
+  height: 100vh;
 }
-.panel__title {
+.transaction-panel__group {
+  border-radius: 1rem;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+}
+.transaction-panel__panel-left {
   padding: 1rem;
-  margin: -1rem -1rem 1rem;
-  background-color: #ddd;
-  font-size: 1rem;
+  display: flex;
+  gap: 3rem;
+  flex-direction: column;
+  padding: 2.5rem;
+  width: 50%;
+  background-color: #000000;
 }
-
-.card-balance {
-  font-family: monospace;
-  font-size: 1.5rem;
+.transaction-panel__panel-right {
+  padding: 1rem;
+  display: flex;
+  gap: 3rem;
+  flex-direction: column;
+  padding: 2.5rem;
+  width: 50%;
+  background-color: #2D2D2D;
 }
-
-.my-products {
+.transaction-panel__section {
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+}
+.transaction-panel__section--space-between {
+  height: 100%;
+  justify-content: space-between;
+}
+.transaction-panel__wrapper {
+  display: flex;
+  flex-direction: row;
+  gap: 1.5rem;
+}
+.transaction-panel__container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.transaction-panel__badge {
+  padding: 0 1rem;
+  background: #212121;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+}
+.transaction-panel__balance {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.transaction-panel__balance--label {
+  font-family: "Source Code Pro", monospace;
+  font-optical-sizing: auto;
+  font-style: normal;
   margin: 0;
-  padding: 0;
-  list-style: none;
-  font-family: monospace;
-  font-size: 1.5rem;
-  line-height: 1.5;
+  font-size: 1rem;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+.transaction-panel__balance--divider {
+  color: #949494;
+}
+.transaction-panel__balance--amount {
+  font-family: "Source Code Pro", monospace;
+}
+.transaction-panel__button-section-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.transaction-panel__button-group {
+  display: flex;
+  flex-direction: row;
+  gap: 1.5rem;
+  justify-content: flex-end;
+}
+.transaction-panel__status {
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  font-family: "Source Code Pro", monospace;
+  font-optical-sizing: auto;
+  font-style: normal;
+  margin: 0;
+  color: #979797;
+  text-align: right;
+}
+.transaction-panel__product {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 2rem;
+}
+.transaction-panel__product-group {
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+}
+.transaction-panel__product-price {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.transaction-panel__product-price--label {
+  font-family: "Source Code Pro", monospace;
+  font-optical-sizing: auto;
+  font-style: normal;
+  margin: 0;
+  font-size: 1rem;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  font-size: 1.125rem;
+}
+.transaction-panel__product-price--divider {
+  color: #949494;
+  font-size: 1.125rem;
+}
+.transaction-panel__product-price--amount {
+  font-family: "Source Code Pro", monospace;
+  font-size: 1.125rem;
+}
+.transaction-panel__logo {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding-right: 2.5rem;
+  gap: 1.25rem;
+  color: #949494;
+  font-size: 0.875rem;
+}
+.transaction-panel__logo--title {
+  font-family: "Source Code Pro", monospace;
+}
+.transaction-panel__logo--label {
+  font-family: "Press Start 2P", system-ui;
 }/*# sourceMappingURL=main.css.map */
