--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,12 @@
+@import "./partials/_variables.scss";
+@import "./partials/mixins.scss";
+@import "./font.scss";
+
+html{
+    background: #161616;
+    color: $text;
+}
+
 *, *::before, *::after {
     box-sizing: border-box;
 }
@@ -10,35 +19,179 @@ body {
     align-items: flex-start;
 }
 
-.panel {
-    flex-grow: 1;
-    margin: 1rem;
-    padding: 1rem;
-    border: 1px solid #ddd;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+button{
+    padding: 0 1.5rem;
+    height: 3rem;
     border-radius: 0.5rem;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
+    background: $button-primary-default;
+    color: $text-dark;
+    font-size: 0.625rem;
+    font-family: "Press Start 2P", system-ui;
+    border: none;
+    box-shadow: none;
+    cursor: pointer;
 
-    &__title {
-        padding: 1rem;
-        margin: -1rem -1rem 1rem;
-        background-color: #ddd;
-        font-size: 1rem;
+    &:hover{
+        background: $button-primary-hover;
+    }
+
+    &:active{
+        background: $button-primary-active;
     }
 }
 
-.card-balance {
-    font-family: monospace;
-    font-size: 1.5rem;
-}
+.transaction-panel{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding: 7.5rem;
+    width: 100%;
+    height: 100vh;
 
-.my-products {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    font-family: monospace;
-    font-size: 1.5rem;
-    line-height: 1.5;
+    &__group{
+        border-radius: 1rem;
+        overflow: hidden; 
+        display: flex;
+        flex-direction: row;  
+        width: 100%;
+        height: 100%;
+    }
+
+    &__panel-left{
+        @include panel;
+        background-color: $foreground;
+    }
+
+    &__panel-right{
+        @include panel;
+        background-color: $foreground-light;
+    }
+
+    &__section{
+        display: flex;
+        flex-direction: column;
+        gap: 1.25rem;
+
+        &--space-between{
+            height: 100%;
+            justify-content: space-between;
+        }
+    }
+
+    &__wrapper{
+        display: flex;
+        flex-direction: row;
+        gap: 1.5rem;
+    }  
+    
+    &__container{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }  
+
+    &__badge{
+        padding: 0 1rem;
+        background: $badge;
+        border-radius: 4px;
+        display: flex;
+        align-items: center;
+    }
+
+    &__balance{
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+
+        &--label{
+            @include body;
+            font-size: 1rem;
+            display: flex;
+            gap: 1rem;
+            align-items: center;
+        }
+
+        &--divider{
+            color: $text-subtlest;
+        }
+
+        &--amount{
+            font-family: "Source Code Pro", monospace;
+        }
+    }
+
+    &__button-section-wrapper{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    &__button-group{
+        display: flex;
+        flex-direction: row;
+        gap: 1.5rem;
+        justify-content: flex-end;
+    }
+
+    &__status{
+        @include p;
+        text-align: right;
+    }
+
+    &__product{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 2rem;
+    }
+
+    &__product-group{
+        display: flex;
+        flex-direction: column;
+        gap: 1.25rem;
+    }
+
+    &__product-price{
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+
+        &--label{
+            @include body;
+            font-size: 1rem;
+            display: flex;
+            gap: 1rem;
+            align-items: center;
+            font-size: 1.125rem;
+        }
+
+        &--divider{
+            color: $text-subtlest;
+            font-size: 1.125rem;
+        }
+
+        &--amount{
+            font-family: "Source Code Pro", monospace;
+            font-size: 1.125rem;
+        }
+    }
+
+    &__logo{
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        padding-right: 2.5rem;
+        gap: 1.25rem;
+        color: $text-subtlest;
+        font-size: 0.875rem;
+
+        &--title{
+            @include default-font;
+        }
+
+        &--label{
+            @include pixel-font;
+        }
+    }
 }
