--- a/styles/main.scss
+++ b/styles/main.scss
@@ -44,12 +44,15 @@ body {
     padding: 0;
     margin: 0;
     border: none;
+    color: white;
+    @include pixel-font;
     box-shadow: none;
     background: none;
     cursor: pointer;
+    opacity: 80%;
 
     &:hover{
-        opacity: 80%;
+        opacity: 100%;
     }
 
     &:active{
@@ -166,8 +169,15 @@ body {
     &__heading-wrapper{
         display: flex;
         flex-direction: row;
-        gap: 0.5rem;
+        justify-content: space-between;
         align-items: center;
+
+        &--left{
+            display: flex;
+            flex-direction: row;
+            gap: 0.5rem;
+            align-items: center;
+        }
     }
 
     &__product-group{
